manifests/active-pieces/index.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: active-pieces
  namespace: tooling
  labels:
    app: active-pieces
spec:
  selector:
    matchLabels:
      app: active-pieces
  template:
    metadata:
      labels:
        app: active-pieces
      annotations: {}
    spec:
      containers:
        - name: active-pieces
          image: ghcr.io/activepieces/activepieces:0.37.6
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "0.1"
              memory: 128Mi
            limits:
              cpu: "0.5"
              memory: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: active-pieces
  namespace: tooling
  labels:
    app: active-pieces
spec:
  ports:
    - appProtocol: http
      name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: active-pieces

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: active-pieces
  namespace: tooling
  labels:
    app: active-pieces
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.kube-dev.incubateur.net/oauth2/start?rd=https%3A%2F%2F$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth.kube-dev.incubateur.net/oauth2/auth
spec:
  rules:
    - host: active-pieces.kube-dev.incubateur.net
      http:
        paths:
          - backend:
              service:
                name: active-pieces
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - active-pieces.kube-dev.incubateur.net
      secretName: active-pieces-tls-secret

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: active-pieces-public
  namespace: tooling
  labels:
    app: active-pieces
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: active-pieces.kube-dev.incubateur.net
      http:
        paths:
          - backend:
              service:
                name: active-pieces
                port:
                  number: 80
            path: /api/v1/webhooks
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - active-pieces.kube-dev.incubateur.net
      secretName: active-pieces-tls-secret
